# vulcanite

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix  license.txt  readme.md
assets/: CMakeLists.txt
assets/shaders/: debug.frag.hlsl  debug.h  debug.vert.hlsl  gradient.comp  gradient.comp.hlsl  gradient.h  interop.h  triangle.frag.hlsl  triangle.h  triangle.h.hlsl  triangle.vert.hlsl
docs/: SUMMARY.md  benchmarks.md  book.toml  default.nix  ecs.md  readme.md  shaders.md
scripts/: find-c-style.sh
src/: CMakeLists.txt  definitions.hpp  impl.cpp  main.cpp  platform-unix.cpp  platform.hpp  threadpool.cpp  threadpool.hpp  times.hpp  vfs.cpp  vfs.hpp
src/core/: bumpallocator.cpp  bumpallocator.hpp  cli.cpp  cli.hpp  cvar.cpp  cvar.hpp  fixedstring.hpp  keyboard.cpp  keyboard.hpp  profiler.cpp  profiler.hpp  resourcemap.hpp  ringbuffer.hpp  settings.hpp  singleton.hpp  window.cpp  window.hpp
src/ecs/: applycommandssystem.cpp  applycommandssystem.hpp  camera.cpp  camera.hpp  component.hpp  entity.hpp  matrixtransform.hpp  named.hpp  registry.cpp  registry.hpp  renderable.hpp  system.hpp  transform.cpp  transform.hpp
src/vk/: buffer.cpp  buffer.hpp  buffermap.cpp  buffermap.hpp  bumpallocator.cpp  bumpallocator.hpp  camerasystem.cpp  camerasystem.hpp  debug.cpp  debug.hpp  frustum.cpp  frustum.hpp  handle.hpp  image.cpp  image.hpp  imagehelpers.cpp  imagehelpers.hpp  imguiwrapper.cpp  imguiwrapper.hpp  material.hpp  mesh.cpp  mesh.hpp  meshloader.cpp  meshloader.hpp  rendersystem.cpp  rendersystem.hpp  resourcemap.hpp  samplercache.cpp  samplercache.hpp  shader.cpp  shader.hpp  texturecache.cpp  texturecache.hpp  texturemanager.cpp  texturemanager.hpp  utility.cpp  utility.hpp  vulkanengine.cpp  vulkanengine.hpp  vulkanhandle.cpp  (+4 more)
